--- a/hfp_hf/.vscode/settings.json
+++ b/hfp_hf/.vscode/settings.json
@@ -1,5 +1,17 @@
 {
   "C_Cpp.intelliSenseEngine": "default",
   "idf.flashType": "UART",
-  "idf.port": "/dev/cu.usbserial-1310"
+  "idf.port": "/dev/cu.usbserial-1310",
+  "idf.adapterTargetName": "esp32",
+  "files.associations": {
+    "esp_bt_main.h": "c",
+    "bt_app_core.h": "c",
+    "unistd.h": "c",
+    "nvs.h": "c",
+    "esp_bt_device.h": "c",
+    "esp_hf_client_api.h": "c",
+    "gpio_pcm_config.h": "c",
+    "esp_console.h": "c",
+    "app_hf_msg_set.h": "c"
+  }
 }
