--- a/hfp_hf/.vscode/settings.json
+++ b/hfp_hf/.vscode/settings.json
@@ -12,6 +12,18 @@
     "esp_hf_client_api.h": "c",
     "gpio_pcm_config.h": "c",
     "esp_console.h": "c",
-    "app_hf_msg_set.h": "c"
+    "app_hf_msg_set.h": "c",
+    "freertos.h": "c",
+    "task.h": "c",
+    "esp_log.h": "c",
+    "esp_gap_bt_api.h": "c",
+    "event_groups.h": "c",
+    "nvs_flash.h": "c",
+    "esp_bt.h": "c",
+    "esp_gap_ble_api.h": "c",
+    "esp_gatt_common_api.h": "c",
+    "string.h": "c",
+    "inttypes.h": "c",
+    "format": "c"
   }
 }
