--- a/gatt_server/.vscode/settings.json
+++ b/gatt_server/.vscode/settings.json
@@ -1,6 +1,5 @@
 {
   "C_Cpp.intelliSenseEngine": "default",
-  "idf.flashType": "UART",
-  "idf.adapterTargetName": "esp32",
-  "idf.port": "/dev/cu.usbserial-2440"
+  "idf.port": "/dev/cu.usbserial-2440",
+  "idf.flashType": "UART"
 }
